<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WAAD-Test</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="authenticate">Authenticate</string>
    <string name="get_token">Get Token</string>
    <string name="fetch_items">Fetch Items</string>
    <string name="add_item">Add Item</string>
    <string name="decode_claims">Decode Claims</string>
    <string name="no_user">Not logged in</string>

</resources>
